css/fmm-theme.css
#wrapper-static-hero, #wrapper-static-content, #index-wrapper { padding: 0; }
/* Front Page Sections */
.section-heading { margin: auto; font-size: 2.5em; text-transform: uppercase; color: #556677;}
.section-sub-heading { margin: auto; margin-top: 10px; font-size: 1em; color: #9999aa;}
.section-heading-separator{ margin: auto; height: 2px; width: 80px; background-color: #84B32B; margin-bottom: 40px; margin-top: 30px;}
a { color: #6a9515; }
a:hover { color: #f8f9fa; }
.site-footer { color: #f8f9fa; }
section { padding-top: 50px; padding-bottom: 50px;}
/* Bootstrap bg colors */
.bg-success { background-color: #85bf43!important; }
/* Bootstrap btns */
.btn-primary{background-color: #84B32B; border-color: #84B32B}
.btn-primary:hover{background-color: #6a9515; border-color: #6a9515;}
.btn-success{background-color: #3e7cb1; border-color: #3e7cb1;}
.btn-success:hover{background-color: #336691; border-color: #336691;}
.btn-outline-light { border-width: 2px; }
/* Text Alignment */
@media (min-width: 768px) {.text-bottom { position: absolute; bottom: 0; left: 0; }}
/* Header */
#wrapper-navbar { -webkit-box-shadow: 0 8px 6px -6px #999; -moz-box-shadow: 0 8px 6px -6px #999; box-shadow: 0 8px 6px -6px #999; }
@media (min-width: 1200px) {.navbar { max-width: 90%; margin: 0 auto; }}
.navbar-expand-md .navbar-nav {margin-left: auto;}
.navbar {flex-wrap: nowrap;}
/* Hero Section */
.jumbotron {
    min-height: 600px;
    background-attachment: fixed;
    background-size: initial;
    background-position: 50% 0%;
    background-repeat: no-repeat;
}
.hero-heading{ text-transform: uppercase; font-size:3em;}
.hero-buttons .btn { margin: 10px; }
/* Main Callout Section */
#main-callout { padding: 20px 0; }
/* Main Content Section*/
.main-thumb{ max-width: 160px; margin: auto; }
/* Services Section */
.service-icon img { margin: 20px 0 15px; }
.services-link { font-weight: bold; color: #556677}
.services-link:hover { text-decoration: none; color: #6a9515; }
/* Products Section */
#products-section { background: #eaeaea; }
@media (min-width: 1200px) { #products-section .container { max-width:960px; }}
/* Team Section */
#team-row { justify-content: space-around; }
.team-photo { max-width: 120px; height: 178px; margin: 20px auto; }
/* Testimonials Section */
.testimonial-wrapper{ background-color: #eaeaea; padding:40px 20px; }
.quote-separator { margin: 20px 0 20px; color: #84B32B; }
.testimonial-heading { color: #556677; }
.testimonial-content { color:#9999aa; }
/* Map Section */
#service-map-section { padding: 0px; height: 566px;}
/* Contact Section */
#contact-section { background: #eaeaea; }

